--- a/roman-number-converter/style.css
+++ b/roman-number-converter/style.css
@@ -9,7 +9,11 @@ body {
     align-items: center;
     font-size: 1.4em;
 }
-
+.container {
+    padding: 1em;
+    border-radius: 10px;
+    box-shadow: 0 2px 3px #000000;
+}
 input,
 button {
     font-size: 1em;
